Fix an invalid cast from RenderWidgetHostViewGuest to RenderWidgetHostViewMac

The method GetRenderWidgetHostViewToUse() picks the guest WebContents for the
fullscreen page to be used for start/stopSpeaking commands in Mac. The guest
WebContents's RenderWidgetHostView is however is incorrectly assumed to be
RenderWidgetHostViewMac. It is actually a RenderWidgetHostViewGuest.

Moreover, since the method SpeakSelection() is implemented for
RenderWidgetHostView there is indeed no need to further cast the view to
RenderWidgetHostViewMac/Guest at all.

BUG=661329

Review-Url: https://codereview.chromium.org/2473443003
Cr-Commit-Position: refs/heads/master@{#429368}